Made accommodation cards clickable

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<section class="filters-bar">
 			<h2>Filters</h2>
 			<nav class="filters">
-				<div id="cost"> 
+				<div id="cost">  
 					<a href="#"><i class="fas fa-money-bill-wave"></i>Low Cost</a>
 				</div>
 				<div id="family">
@@ -53,96 +53,108 @@
 		<div class="main">
             <section id="accommodation">
                 <h2>Accommodation in Marseille</h2>
-                <figure class="accommodation_figure">
-                    <img src="images/accommodation/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="A bright room with bunkbeds and a window overlooking a colourful street." title="Auberge la Cannebière">
-                    <figcaption>
-                        <strong>Auberge la Cannebière</strong>
-                        <br>
-                        Night starting at <strong>25€</strong>
-                        <div class="rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i id="grey" class="fas fa-star"></i>
-                        </div>
-                    </figcaption>
-                </figure>
-                <figure class="accommodation_figure">
-                    <img src="images/accommodation/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="A light breezy room with two single beds and open window." title="Hôtel du port">
-                    <figcaption>
-                        <strong>Hôtel du port</strong>
-                        <br>
-                        Night starting at <strong>52€</strong>
-                        <div class="rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </figcaption>
-                </figure>
-                <figure class="accommodation_figure">
-                    <img src="images/accommodation/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="A stylish room with a double bed and cozy atmosphere." title="Les mouettes Hotel">
-                    <figcaption>
-                        <strong>Les mouettes Hotel</strong>
-                        <br>
-                        Night starting at <strong>76€</strong>
-                        <div class="rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i id="grey" class="fas fa-star"></i>
-                        </div>
-                    </figcaption>
-                </figure>
-                <figure class="accommodation_figure">
-                    <img src="images/accommodation/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="A bright room with colourful sea-side decoration." title="Hôtel de la mer">
-                    <figcaption>
-                        <strong>Hôtel de la mer</strong>
-                        <br>
-                        Night starting at <strong>46€</strong>
-                        <div class="rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i id="grey" class="fas fa-star"></i>
-                            <i id="grey" class="fas fa-star"></i>
-                        </div>
-                    </figcaption>
-                </figure>
-                <figure class="accommodation_figure">
-                    <img src="images/accommodation/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="A rustic room with cozy dark-wood bunkbeds." title="Auberge Le Panier">
-                    <figcaption>
-                        <strong>Auberge Le Panier</strong>
-                        <br>
-                        Night starting at <strong>23€</strong>
-                        <div class="rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i id="grey" class="fas fa-star"></i>
-                        </div>
-                    </figcaption>
-                </figure>
-                <figure class="accommodation_figure">
-                    <img src="images/accommodation/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="A clean simple room with two single beds, desk and television." title="Hôtel chez Amina">
-                    <figcaption>
-                        <strong>Hôtel chez Amina</strong>
-                        <br>
-                        Night starting at <strong>96€</strong>
-                        <div class="rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </figcaption>
-                </figure>
+                <a href="#">
+                    <figure class="accommodation_figure">
+                        <img src="images/accommodation/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="A bright room with bunkbeds and a window overlooking a colourful street." title="Auberge la Cannebière">
+                        <figcaption>
+                            <strong>Auberge la Cannebière</strong>
+                            <br>
+                            Night starting at <strong>25€</strong>
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i id="grey" class="fas fa-star"></i>
+                            </div>
+                        </figcaption>    
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure class="accommodation_figure">
+                        <img src="images/accommodation/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="A light breezy room with two single beds and open window." title="Hôtel du port">
+                        <figcaption>
+                            <strong>Hôtel du port</strong>
+                            <br>
+                            Night starting at <strong>52€</strong>
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure class="accommodation_figure">
+                        <img src="images/accommodation/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="A stylish room with a double bed and cozy atmosphere." title="Les mouettes Hotel">
+                        <figcaption>
+                            <strong>Les mouettes Hotel</strong>
+                            <br>
+                            Night starting at <strong>76€</strong>
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i id="grey" class="fas fa-star"></i>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure class="accommodation_figure">
+                        <img src="images/accommodation/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="A bright room with colourful sea-side decoration." title="Hôtel de la mer">
+                        <figcaption>
+                            <strong>Hôtel de la mer</strong>
+                            <br>
+                            Night starting at <strong>46€</strong>
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i id="grey" class="fas fa-star"></i>
+                                <i id="grey" class="fas fa-star"></i>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure class="accommodation_figure">
+                        <img src="images/accommodation/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="A rustic room with cozy dark-wood bunkbeds." title="Auberge Le Panier">
+                        <figcaption>
+                            <strong>Auberge Le Panier</strong>
+                            <br>
+                            Night starting at <strong>23€</strong>
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i id="grey" class="fas fa-star"></i>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure class="accommodation_figure">
+                        <img src="images/accommodation/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="A clean simple room with two single beds, desk and television." title="Hôtel chez Amina">
+                        <figcaption>
+                            <strong>Hôtel chez Amina</strong>
+                            <br>
+                            Night starting at <strong>96€</strong>
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>    
                 <h3>Show more</h3>
             </section>
             <aside class="popular">
@@ -164,7 +176,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                     </figcaption>
-                </figure>
+                </figure>  
                 <figure class="popular_figure">
                     <img src="images/accommodation/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="A large stylish modern room with double bed." title="Au Cœur de l'eau Bed and Breakfast">
                     <figcaption>
@@ -200,22 +212,26 @@
 		<section id="activities">
 			<h2>Activities in Marseille</h2>
 			<figure id="port" class="activities_figure">
+                <a html="#">
 				<img src="images/activities/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Marseille's old port showing dozens of boats infront of the city's waterside" title="Old Port">
 				<figcaption>
                     <strong>Old Port</strong>
 				</figcaption>
+                </a>    
 			</figure>
 			<figure id="fort" class="activities_figure">
-				<img src="images/activities/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Marseille's Pomègues fort on the hilltop surrounded by rocks" title="Pomègues Fort">
+                <img src="images/activities/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Marseille's Pomègues fort on the hilltop surrounded by rocks" title="Pomègues Fort">
 				<figcaption>
                     <strong>Pomègues Fort</strong>
-				</figcaption>
+				</figcaption>    
 			</figure>
 			<figure class="activities_figure">
+                <a html="#">
 				<img src="images/activities/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="A view over the rooftops of the city with the impressive Notre Dame de la Garde rising into a clear blue sky above the cityscape" title="Notre Dame de la Garde">
 				<figcaption>
                     <strong>Notre Dame de la Garde</strong>
 				</figcaption>
+                </a>    
 			</figure>
 			<figure id="calanques" class="activities_figure">
 				<img src="images/activities/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="The beautiful cliffs of Calanques National Park standing tall over the gentle deep-blue sea below" title="Calanques National Park">
