--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<!-- LINKS TO CSS FILE ("STYLESHEET") AND SITE ICON -->
 		<link href="css/style.css" type="text/css" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/7ebcda896f.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     </head>
     <body>
 		<header>
